# llm-service-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: __init__.py  settings.py
modules/langchain/: __init__.py
modules/langchain/agents/: __init__.py  conversation_agent.py
modules/langchain/http_handlers/: __init__.py  conversation.py
modules/langchain/services/: __init__.py  checkpointer.py  session_service.py
modules/langchain/tools/: __init__.py
modules/web/: __init__.py
modules/web/docs/: ARCHITECTURE.md  FLOW.md  README.md
modules/web/http_handlers/: __init__.py  auth.py  chat.py  pages.py
modules/web/services/: __init__.py  auth_service.py
modules/web/templates/: base.html  chat.html  login.html  register.html
shared/: __init__.py
shared/models/: __init__.py  sessions_model.py  users_model.py
shared/persistance/: __init__.py  mongo_db.py
shared/services/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py  test_auth_service_integration.py  test_mongodb_integration.py  test_session_service_integration.py
tests/unit/: test_auth_service.py  test_conversation_agent.py  test_models.py  test_mongo_pool.py  test_session_service.py  test_settings.py
